# o3-running-script

./: .gitignore  README.md  pyproject.toml
o3/: .gitignore  main.py  pyproject.toml
o3/zsh/: commands.py  environments.py  ide.py  settings.py  vpn.py
yaana/: main.py  project-features.txt
yaana/zsh/: yaana_project_running_script.py
