[tool.poetry]
name = "o3-running-script"
version = "1.2"
description = "This is a python script to run the Yaana o3 project and configure the OVPN3"
authors = ["Shakhlyn <shakhlyn.sh.du@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
