[tool.poetry]
name = "o3-running-script"
version = "1.2.0"
description = "This is a script to the run the project along with initializing the OVPN3"
authors = ["Shakhlyn <shakhlyn.sh.du@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
